Fix for large images on mobile

--- a/style.css
+++ b/style.css
@@ -203,4 +203,7 @@ footer p {
 		line-height: 36px;
 	}
 
+	.inner {
+		overflow: hidden;
+	}
 }
